syntax = "proto3";

enum InputId {
  INPUT_ACTION_UNSPECIFIED = 0;

  // Button pressed events
  BUTTON_1_PRESSED = 1;
  BUTTON_2_PRESSED = 2;
  BUTTON_3_PRESSED = 3;
  BUTTON_4_PRESSED = 4;
  BUTTON_5_PRESSED = 5;
  BUTTON_6_PRESSED = 6;
  BUTTON_7_PRESSED = 7;
  BUTTON_8_PRESSED = 8;
  BUTTON_9_PRESSED = 9;
  BUTTON_10_PRESSED = 10;

  // Button released events
  BUTTON_1_RELEASED = 11;
  BUTTON_2_RELEASED = 12;
  BUTTON_3_RELEASED = 13;
  BUTTON_4_RELEASED = 14;
  BUTTON_5_RELEASED = 15;
  BUTTON_6_RELEASED = 16;
  BUTTON_7_RELEASED = 17;
  BUTTON_8_RELEASED = 18;
  BUTTON_9_RELEASED = 19;
  BUTTON_10_RELEASED = 20;

  // Knob rotation events
  KNOB_1_CLOCKWISE = 21;
  KNOB_2_CLOCKWISE = 22;
  KNOB_3_CLOCKWISE = 23;
  KNOB_4_CLOCKWISE = 24;
  KNOB_1_COUNTER_CLOCKWISE = 25;
  KNOB_2_COUNTER_CLOCKWISE = 26;
  KNOB_3_COUNTER_CLOCKWISE = 27;
  KNOB_4_COUNTER_CLOCKWISE = 28;

  // Knob pressed events
  KNOB_1_PRESSED = 29;
  KNOB_2_PRESSED = 30;
  KNOB_3_PRESSED = 31;
  KNOB_4_PRESSED = 32;

  // Touchscreen events
  TOUCHSCREEN_ZONE_1_PRESSED = 33;
  TOUCHSCREEN_ZONE_2_PRESSED = 34;
  TOUCHSCREEN_ZONE_3_PRESSED = 35;
  TOUCHSCREEN_ZONE_4_PRESSED = 36;
  TOUCHSCREEN_SWIPED_LEFT = 37;
  TOUCHSCREEN_SWIPED_RIGHT = 38;
}
