syntax = "proto3";

import "commands/common/keys.proto";
import "commands/common/inputs.proto";

package key_config;

message KeyConfig {
  InputId input_id = 1;           // Identifier for the button (e.g., "button_1", "key_f1")
  repeated Action actions = 2;    // Sequence of actions to perform
}

message Action {
  ActionType type = 1;
  oneof action_data {
    KeyAction key_action = 2;
  }
}

enum ActionType {
  ACTION_TYPE_KEY = 0;
}

message KeyAction {
  Key key = 1;                   // e.g., "v", "f1", "enter"
  optional uint32 unicode = 2;   // only required if we are using a key input
  optional uint32 other_key_code = 3;
}
