syntax = "proto3";

enum Key {
  KEY_UNSPECIFIED = 0;
  KEY_ADD = 1;
  KEY_ALT = 2;
  KEY_BACKSPACE = 3;
  KEY_BREAK = 4;
  KEY_BEGIN = 5;
  KEY_CANCEL = 6;
  KEY_CAPS_LOCK = 7;
  KEY_CLEAR = 8;
  KEY_COMMAND = 9;
  KEY_CONTROL = 10;
  KEY_DECIMAL = 11;
  KEY_DELETE = 12;
  KEY_DIVIDE = 13;
  KEY_DOWN_ARROW = 14;
  KEY_END = 15;
  KEY_ESCAPE = 16;
  KEY_EXECUTE = 17;
  KEY_F1 = 18;
  KEY_F2 = 19;
  KEY_F3 = 20;
  KEY_F4 = 21;
  KEY_F5 = 22;
  KEY_F6 = 23;
  KEY_F7 = 24;
  KEY_F8 = 25;
  KEY_F9 = 26;
  KEY_F10 = 27;
  KEY_F11 = 28;
  KEY_F12 = 29;
  KEY_F13 = 30;
  KEY_F14 = 31;
  KEY_F15 = 32;
  KEY_F16 = 33;
  KEY_F17 = 34;
  KEY_F18 = 35;
  KEY_F19 = 36;
  KEY_F20 = 37;
  KEY_F21 = 38;
  KEY_F22 = 39;
  KEY_F23 = 40;
  KEY_F24 = 41;
  KEY_F25 = 42;
  KEY_F26 = 43;
  KEY_F27 = 44;
  KEY_F28 = 45;
  KEY_F29 = 46;
  KEY_F30 = 47;
  KEY_F31 = 48;
  KEY_F32 = 49;
  KEY_F33 = 50;
  KEY_F34 = 51;
  KEY_F35 = 52;
  KEY_FIND = 53;
  KEY_HANGUL = 54;
  KEY_HANJA = 55;
  KEY_HELP = 56;
  KEY_HOME = 57;
  KEY_INSERT = 58;
  KEY_KANJI = 59;
  KEY_L_CONTROL = 60;
  KEY_LEFT_ARROW = 61;
  KEY_LINEFEED = 62;
  KEY_L_MENU = 63;
  KEY_L_SHIFT = 64;
  KEY_MEDIA_NEXT_TRACK = 65;
  KEY_MEDIA_PLAY_PAUSE = 66;
  KEY_MEDIA_PREV_TRACK = 67;
  KEY_MEDIA_STOP = 68;
  KEY_META = 69;
  KEY_MODE_CHANGE = 70;
  KEY_MULTIPLY = 71;
  KEY_NUMLOCK = 72;
  KEY_NUMPAD0 = 73;
  KEY_NUMPAD1 = 74;
  KEY_NUMPAD2 = 75;
  KEY_NUMPAD3 = 76;
  KEY_NUMPAD4 = 77;
  KEY_NUMPAD5 = 78;
  KEY_NUMPAD6 = 79;
  KEY_NUMPAD7 = 80;
  KEY_NUMPAD8 = 81;
  KEY_NUMPAD9 = 82;
  KEY_OPTION = 83;
  KEY_PAGE_DOWN = 84;
  KEY_PAGE_UP = 85;
  KEY_PAUSE = 86;
  KEY_PRINT = 87;
  KEY_PRINT_SCR = 88;
  KEY_R_CONTROL = 89;
  KEY_REDO = 90;
  KEY_RETURN = 91;
  KEY_RIGHT_ARROW = 92;
  KEY_R_SHIFT = 93;
  KEY_SCROLL_LOCK = 94;
  KEY_SELECT = 95;
  KEY_SCRIPT_SWITCH = 96;
  KEY_SHIFT = 97;
  KEY_SHIFT_LOCK = 98;
  KEY_SPACE = 99;
  KEY_SUBTRACT = 100;
  KEY_SUPER = 101;
  KEY_SYS_REQ = 102;
  KEY_TAB = 103;
  KEY_UNDO = 104;
  KEY_UP_ARROW = 105;
  KEY_VOLUME_DOWN = 106;
  KEY_VOLUME_MUTE = 107;
  KEY_VOLUME_UP = 108;
  KEY_MIC_MUTE = 109;
  KEY_WINDOWS = 110;
  KEY_UNICODE = 111;
  KEY_OTHER = 112;
}
